# ReEDS

./: .buildinfo  .gitignore  AGENTS.md  Augur.py  CLAUDE.md  Project.toml  README.md  b_inputs.gms  bokehpivot.html  c_mga.gms  c_supplymodel.gms  c_supplyobjective.gms  cases.csv  cases_DC_load.csv  cases_allwyears(old).csv  cases_climate.csv  cases_climatescens(old).csv  cases_climatescens.csv  cases_coalranks.csv  cases_examples.csv  cases_finalclimate.csv  cases_finito.csv  cases_fuelcell.csv  cases_fuelcell_USA.csv  cases_fuelcell_outdate.csv  cases_geohydro.csv  cases_ghp.csv  cases_h2-fuelcell.csv  cases_inputtest.csv  cases_mat_kp.csv  cases_mat_kp_dc_demand.csv  cases_mat_limit_q.csv  cases_materials.csv  cases_materials_all.csv  cases_materials_special.csv  cases_materials_special2.csv  cases_materials_test.csv  cases_ng.csv  cases_paper_5.csv  cases_paper_current.csv  (+85 more)
.doctrees/: bokehpivot.doctree  diagnose.doctree  (+13 more)
hourlize/: README.md  define_tech_classes.py  load.py  pyproject.toml  reeds_to_rev.py  resource.py  run_hourlize.py  write_site_parameters.py
hourlize/agg_buildings/: agg_buildings.py
hourlize/inputs/configs/: cases_basecase.json  cases_basecase_classbin2000base.json  cases_ecearth3.json  cases_ecearth3_ofs.json  cases_ecearth3cc.json  cases_ecearth3cc_classbin2000base(old).json  cases_ecearth3cc_classbin2000base.json  cases_ecearth3veg.json  cases_fix.json  cases_gfdlcm4.json  cases_mpiesm12hr.json  cases_mriesm20.json  cases_mriesm20_ofs.json  cases_taiesm1.json  cases_w2000ecearth3cc.json  cases_w2010ecearth3cc.json  config_base.json  config_upv.json  config_wind-ofs.json  config_wind-ons.json  srun_template.sh
hourlize/inputs/load/: sector_config.json
hourlize/inputs/resource/: get_classes.py  offshore_zone_names.csv  upv_ecearth3cc2000_classes.csv  upv_nsrdb_classes.csv  wind-ofs_wtk_hrrr_classes.csv  wind-ons_ecearth3cc2000_classes.csv  wind-ons_wtk_hrrr_classes.csv
hourlize/reveal2reeds/: config.json  reveal2reeds.py
(+550 files in other folders)
