[project]
name = "ReEDS"
version = "2025.0.0"

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
]


[tool.ruff]
# extend-exclude: Added to default list of excluded directories
extend-exclude = ["runs"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# ignore rules:
# - module-import-not-at-top-of-file (E402)
ignore = ["E402"]

[tool.ruff.format]
# quote-style: "single" | "double" | "preserve"
quote-style = "preserve"
# line-ending: "auto" | "lf" | "cr-lf" | "native"
line-ending = "lf"
docstring-code-format = true


[tool.black]
include = '''
(
    hourlize/tests/.*\.py?$
    | hourlize/reeds_to_rev\.py?$
)
'''
